revenue share migration

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 node_modules
 types
 test
+migrations
 build/contracts/*.json
 !build/contracts/Migrations.json
 !build/contracts/RevenueShare.json
+.openzeppelin/unknown-*.json
 
 package-lock.json
 yarn.lock
