--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/web3": "^1.2.2",
-    "ganache-cli": "^6.12.2",
+    "ganache": "^7.0.4",
     "truffle": "^5.4.28",
     "truffle-flattener": "^1.6.0",
     "typechain": "^6.0.5",
